--- a/react-portfolio/public/index.html
+++ b/react-portfolio/public/index.html
@@ -3,12 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+  <link rel="icon" href="./images/K-Bugz.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Bugusky Portfolio</title>
 </head>
 
